# SolutionViewer

./: CMakeLists.txt  README  SolutionViewer.kdev4
shaders/: box.frag  box.vs
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  object.cpp  object.h  solutionviewer.cpp  solutionviewer.h  solutionviewer.ui
